--- a/base.css
+++ b/base.css
@@ -1,5 +1,5 @@
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lexend Deca', sans-serif;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
@@ -11,43 +11,41 @@
   scroll-behavior: smooth;
 
   /* Primary */
-  --very-dark-blue: hsl(233, 47%, 7%);
-  --dark-desat-blue: hsl(244, 38%, 16%);
-  --soft-violet: hsl(277, 64%, 61%);
+  --bright-orange: hsl(31, 77%, 52%);
+  --dark-cyan: hsl(184, 100%, 22%);
+  --v-dark-cyan: hsl(179, 100%, 13%);
 
   /* Neutral */
-  --white: hsl(0, 0%, 100%);
   --transparent-white: hsla(0, 0%, 100%, 0.75);
-  --transparent-white-2: hsla(0, 0%, 100%, 0.6);
+  --v-light-gray: hsl(0, 0%, 95%);
 
   /* Typography */
-  --h1: 38px;
   --h2: 26px;
   --body: 15px;
-  --body-small: 12px;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--very-dark-blue);
+  background-color: var(--v-light-gray);
   min-height: 100vh;
   padding: 30px;
 }
 
+h2 {
+  font-family: 'Big Shoulders Display', cursive;
+}
+
 @media (max-width: 1200px) {
   :root {
-    --h1: 32px;
     --h2: 22px;
   }
 }
 
 @media (max-width: 500px) {
   :root {
-    --h1: 22px;
     --h2: 18px;
     --body: 12px;
-    --body-small: 10px;
   }
 }
