--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@
 .card-description {
   font-size: var(--body);
   color: var(--transparent-white);
+  margin-bottom: 75px;
   max-width: 200px;
   line-height: 1.75;
 }
